# pydwarfs

./: CMakeLists.txt  README.md  pytest.ini  setup.py
pydwarfs/: __init__.py
pydwarfs/reader/: __init__.py
src/: pydwarfs.cpp
tests/: test_basic.py
